fix bubble overflow

--- a/index.css
+++ b/index.css
@@ -13,10 +13,14 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  background-color: rgba(13, 8, 34);
+
 }
 .wrapper {
-  width: 100%;
-  height: 100%;
+margin-top: 20px;
+  max-width: 100%;
+  max-height: 100%;
+  width: 1500px;
   color: rgb(216, 212, 218);
   font-family: "Varela Round", sans-serif;
   background-color: rgba(13, 8, 34);
@@ -83,9 +87,9 @@ body {
   z-index: 3;
 }
 .p2 {
-  position: fixed;
+  position: absolute;
   left: 60%;
-  top: 40%;
+  top: 29%;
   width: 550px;
   height: 550px;
   border-radius: 50%;
@@ -248,3 +252,13 @@ li.dropdown {
   font-family: "Teko", sans-serif;
   font-size: 25px;
 }
+
+@media only screen and (max-width: 749px) {
+    .bubbles{
+        display: none;
+    }
+    .glass{
+        background-color: rgba(13, 8, 34);
+
+    }
+  }
